# PDF-Split-Merge-Tool

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
src/pdf_tool/: __init__.py  cli.py  core.py  gui.py
