[project]
name = "pdf-split-merge-tool"
version = "0.1.0"
description = "PDF splitting and merging tool with CLI and GUI interfaces"
requires-python = ">=3.10"
dependencies = [
    "pikepdf>=10.5.1",
    "PySide6>=6.8",
    "pdf2image>=1.17",
]

[project.scripts]
pdf-tool = "pdf_tool.cli:main"
pdf-tool-gui = "pdf_tool.gui:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pdf_tool"]

[dependency-groups]
dev = [
    "pyinstaller>=6.20.0",
]
